--- a/AndroidPhoneX/Resources/layout/activity_call.axml
+++ b/AndroidPhoneX/Resources/layout/activity_call.axml
@@ -1,30 +1,74 @@
-<?xml version="1.0" encoding="UTF-8"?>
+
 <LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:minWidth="25px"
-	android:minHeight="25px"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:id="@+id/activity_call">
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="47.5dp"
-		android:id="@+id/callInfo"
-		android:text="TelPhone No." />
-	<Button
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/answer"
-		android:text="answer" />
-	<Button
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/hangup"
-		android:text="hangup" />
-    <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:minWidth="25px"
+    android:minHeight="25px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/linearLayout1">
+    <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="47.5dp"
-        android:id="@+id/textView1"
-        android:text="TextView1" />
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout2" >
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="150px"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout3">
+            <TextView
+                android:text="Text1"
+                android:minWidth="25px"
+                android:minHeight="100px"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/callInfo" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="150px"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout4">
+            <TextView
+                android:text="Text2"
+                android:minWidth="25px"
+                android:minHeight="100px"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/textView2" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="150px"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout5">
+            <Button
+                android:text="answer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/answer" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="150px"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout6" >
+            <Button
+                android:text="Button2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/hangup" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
