--- a/AndroidPhoneX/Resources/layout/activity_call.axml
+++ b/AndroidPhoneX/Resources/layout/activity_call.axml
@@ -7,68 +7,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/linearLayout1">
-    <LinearLayout
-        android:orientation="vertical"
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/linearLayout2" >
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="150px"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout3">
-            <TextView
-                android:text="Text1"
-                android:minWidth="25px"
-                android:minHeight="100px"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/callInfo" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="150px"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout4">
-            <TextView
-                android:text="Text2"
-                android:minWidth="25px"
-                android:minHeight="100px"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/textView2" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="150px"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout5">
-            <Button
-                android:text="answer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/answer" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="150px"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout6" >
-            <Button
-                android:text="Button2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/hangup" />
-        </LinearLayout>
-    </LinearLayout>
+	<LinearLayout
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/linearLayout2">
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="150px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout3">
+			<LinearLayout
+				android:orientation="vertical"
+				android:minWidth="25px"
+				android:minHeight="25px"
+				android:layout_width="114.5dp"
+				android:layout_height="match_parent"
+				android:id="@+id/linearLayout6">
+				<ImageView
+					android:src="@android:drawable/ic_menu_gallery"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:id="@+id/imageView1" />
+			</LinearLayout>
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="150px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout4">
+			<TextView
+				android:text="Text1"
+				android:minWidth="25px"
+				android:minHeight="100px"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/callInfo" />
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="250px"
+			android:minHeight="150px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout5">
+			<TextView
+				android:text="Text2"
+				android:minWidth="25px"
+				android:minHeight="100px"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/textView2" />
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout7" >
+			<Button
+				android:text="answer"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/answer" />
+			<Button
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/hangup"
+				android:text="hangup"
+				android:layout_marginLeft="0.0dp" />
+		</LinearLayout>
+	</LinearLayout>
 </LinearLayout>
