--- a/AndroidPhoneX/Resources/layout/activity_call.axml
+++ b/AndroidPhoneX/Resources/layout/activity_call.axml
@@ -29,10 +29,12 @@
 				android:layout_height="match_parent"
 				android:id="@+id/linearLayout6">
 				<ImageView
-					android:src="@android:drawable/ic_menu_gallery"
+					android:src="@drawable/calling"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:id="@+id/imageView1" />
+					android:id="@+id/imageView1"
+					android:adjustViewBounds="false"
+					android:layout_marginBottom="0.0dp" />
 			</LinearLayout>
 		</LinearLayout>
 		<LinearLayout
